--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="card">
+      <div class="card small">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
@@ -33,7 +33,7 @@
           Lorem placeholder
         </div>
       </div>
-      <div class="card">
+      <div class="card small">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
@@ -41,7 +41,7 @@
           Lorem placeholder
         </div>
       </div>
-      <div class="card">
+      <div class="card small">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
@@ -49,7 +49,7 @@
           Lorem placeholder
         </div>
       </div>
-      <div class="card">
+      <div class="card small">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="card">
+      <div class="card large">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
@@ -67,7 +67,7 @@
           Lorem placeholder
         </div>
       </div> 
-      <div class="card">
+      <div class="card large">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
@@ -75,7 +75,7 @@
           Lorem placeholder
         </div>
       </div> 
-      <div class="card">
+      <div class="card large">
         <div class="card-image">
           <div class="image-placeholder" style="background-color: #2781BB"></div>
         </div>
